Adding code configuration for app insights

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -1,13 +1,47 @@
 # Configure Application Insights for eShopLegacy applications 
-The MVC and WebForms modernized applications have installed the Application Insights Nuget packages to produce metrics and send it to an Azure Application Insights service. The only thing we need to configure is the Instrument Key of the Azure Application Insights where we want to receive the data.
+The MVC and WebForms modernized applications have installed the Application Insights Nuget packages to produce metrics and send it to an Azure Application Insights service. By default the package needed is `Microsoft.ApplicationInsights`. This package adds an `ApplicationInsights.config` file and other nuget dependecies.
 
-We can find in the 'docker-compose.override.yml' file the variable to set:
+### Adding metrics for the traces
+In order to send the logs of the application to the Application Insights, the traces that we add to our code, we need to do the next steps:
+1. Install Microsoft.ApplicationInsights.TraceListener nuget package.
+2. Add to the `Web.config` file this lines to add a TraceListener:
+```
+<system.diagnostics>
+    <trace autoflush="true" indentsize="0">
+      <listeners>
+        <add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
+```
+And this is all you need. The `System.Diagnostics.Trace` logs are automatically collected and processed by the Application Insights engine:
+
+```
+Trace.TraceInformation($"Received request for action {filterContext.ActionDescriptor.ActionName} in controller {filterContext.Controller.GetType().Name}.");
+```
+
+### Identifying the Application Instance resource
+Once our application is ready to collect the metrics, we have to indicate which Application Insights resource will receive the data. The only thing we need to configure here is the Instrument Key of the Azure Application Insights where we want to send the data. We can find the variable in the 'docker-compose.override.yml' file:
 
 ```
 - AppInsightsInstrumentationKey=${APP_INSIGHTS_INSTRUMENTATION_KEY}
 ```
 
-As for the rest of variables it needs to be set in different ways depending on the environment (VM, Serfice Fabric or Kubernetes).
+As for the rest of variables it needs to be set in different ways depending on the environment (VM, Serfice Fabric or Kubernetes). In the `Global.asax` file we configure by code the instrumentation key. We are using containers and 
+thus environment variables must prevail over the `Web.config`, so we use the `CatalogConfiguration` class that we have implemented to obtain the instrumentation key from the environment variables and set it:
+
+```C#
+var environmentKey = CatalogConfiguration.AppInsightsInstrumentationKey;
+
+if (!string.IsNullOrEmpty(environmentKey))
+{
+    TelemetryConfiguration.Active.InstrumentationKey = environmentKey;
+}
+``` 
+
+
+
+In the next section we will see how to create one Application Insights resource in Azure and find this intrumentation key.
 
 ## Create Azure Application Insights
 Open the Azure portal, click new, and search for Application Insights. In the creation form select Application Type `Asp.NET web application`.
@@ -16,7 +50,7 @@ Open the Azure portal, click new, and search for Application Insights. In the cr
 
 Finally retrieve the Instrumentation Key from you Application Insights service and set it in your application as the value for the `AppInsightsInstrumentationKey` variable.
 
-### Monitoring multi-component applications
+### Monitoring multi-component applications using Cloud-role name
 
 If we have multiple applications, each in its container, sending metrics to the same Application Insights resource, we have extra functionality to facilitate the distinction of the different components, thanks to the 'Multi-role application map' and the 'Cloud-role name'. Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
 
