Add cloud role name section

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -20,14 +20,43 @@ And this is all you need. The `System.Diagnostics.Trace` logs are automatically 
 Trace.TraceInformation($"Received request for action {filterContext.ActionDescriptor.ActionName} in controller {filterContext.Controller.GetType().Name}.");
 ```
 
-### Identifying the Application Instance resource
+### Configuring the Cloud-role name to identify components
+If we have multiple applications, each in its container, sending metrics to the same Application Insights resource, we have extra functionality to facilitate the distinction of the requests send to different components. The `Cloud-role name` field has been created in Application Inishgts for this purpose. The idea is that each different component have a different name that identifies the component, in our case the container, and you can filter all the data using this one.
+
+To configure the Cloud-role name you need to create one telemetry initializer and add it to the list active ones. The steps are:
+1. Create one class that inherits from ITelemetryInitializer, and set there for the requests (type of telemetry is `RequestTelemetry`) the desired cloud role name. In this case we have just put the name of the application:
+
+```C#
+using Microsoft.ApplicationInsights.Channel;
+using Microsoft.ApplicationInsights.DataContracts;
+using Microsoft.ApplicationInsights.Extensibility;
+
+namespace eShopModernizedMVC
+{
+    public class MyTelemetryInitializer : ITelemetryInitializer
+    {
+        public void Initialize(ITelemetry telemetry)
+        {
+            var requestTelemetry = telemetry as RequestTelemetry;
+            if (requestTelemetry?.Context?.Cloud == null) return;
+            requestTelemetry.Context.Cloud.RoleName = "eShopModernizedMVC";
+        }
+    }
+}
+```  
+2. Add the new telemetry initializer, in this case 'MyTelemetryInitializer' to the list during the initialization in the `Global.asax.cs`:
+```C#
+TelemetryConfiguration.Active.TelemetryInitializers.Add(new MyTelemetryInitializer());
+``` 
+
+### Identifying the Application Insights resource
 Once our application is ready to collect the metrics, we have to indicate which Application Insights resource will receive the data. The only thing we need to configure here is the Instrument Key of the Azure Application Insights where we want to send the data. We can find the variable in the 'docker-compose.override.yml' file:
 
 ```
 - AppInsightsInstrumentationKey=${APP_INSIGHTS_INSTRUMENTATION_KEY}
 ```
 
-As for the rest of variables it needs to be set in different ways depending on the environment (VM, Serfice Fabric or Kubernetes). In the `Global.asax` file we configure by code the instrumentation key. We are using containers and 
+As for the rest of variables it needs to be set in different ways depending on the environment (VM, Serfice Fabric or Kubernetes). In the `Global.asax.cs` file we configure by code the instrumentation key. We are using containers and 
 thus environment variables must prevail over the `Web.config`, so we use the `CatalogConfiguration` class that we have implemented to obtain the instrumentation key from the environment variables and set it:
 
 ```C#
