Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -1,5 +1,7 @@
 # Configure Application Insights for eShopLegacy applications 
-The MVC and WebForms modernized applications have installed the Application Insights Nuget packages to produce metrics and send it to an Azure Application Insights service. By default the package needed is `Microsoft.ApplicationInsights`. This package adds an `ApplicationInsights.config` file and other nuget dependecies.
+The MVC and WebForms modernized applications have installed the Application Insights Nuget packages to produce metrics and send it to an Azure Application Insights service. By default the package needed is `Microsoft.ApplicationInsights`. This package adds an `ApplicationInsights.config` file and other nuget dependecies. Only with this packaage the library will collect already a lot of metrics, regarding web requests, exceptions thrown, etc.
+
+In the next sections we will see how to add more metrics. Traces for instance require an extra step to be collected. 
 
 ### Adding metrics for the traces
 In order to send the logs of the application to the Application Insights, the traces that we add to our code, we need to do the next steps:
