Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -22,6 +22,9 @@ And this is all you need. The `System.Diagnostics.Trace` logs are automatically 
 Trace.TraceInformation($"Received request for action {filterContext.ActionDescriptor.ActionName} in controller {filterContext.Controller.GetType().Name}.");
 ```
 
+### Adding metrics for Service Fabric
+In order to get some extra information from the metrics when the services are in a Service Fabric cluster, we must install the optional Nuget package `Microsoft.ApplicationInsights.ServiceFabric`. No extra configuration is required because the automatic installation of the package via nuget manager handles all the changes. Thanks to this package, we can obtain information about the node where the container is.
+
 ### Configuring the Cloud-role name to identify components
 If we have multiple applications, each in its container, sending metrics to the same Application Insights resource, we have extra functionality to facilitate the distinction of the requests send to different components. The `Cloud-role name` field has been created in Application Inishgts for this purpose. The idea is that each different component have a different name that identifies the component, in our case the container, and you can filter all the data using this one.
 
