Updated 09. How to add authentication authorization with Azure Active Directory (markdown)

--- a/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
+++ b/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
@@ -121,3 +121,19 @@ if (!Request.IsAuthenticated)
 }
 ```
 3. In case you want to have optional login by configuration, as in MVC you can add the OwinMiddleware class AuthenticationMiddleware found in the eShopModernizedWebForms application to your own project, adding to the Invoke method the specific claims required for your authentication.
+
+## Add new users to the directory
+Once we have the application registered in the proper AAD, and the code implemented, we can add our users. To create a new user you can follow this steps in the Azure portal:
+1. Enter to the Azure Active Directory in your Azure Portal (steps 1 to 3 from the [first section of this entry](https://github.com/dotnet-architecture/eShopModernizing/wiki/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory#register-the-application-with-an-azure-active-directory-tenant]))
+2. Click to Users and groups in the left pane.
+3. Click to All users and there you can click to New user
+![Add new user](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_addnewuser.PNG)
+4. In the form fill the required data for the new user. Have in mind that the user name must contain one existing and valid directory. In our case for instance is eshoponcontainers.onmicrosoft.com, the domain of our tenant.
+![Fill user data](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_createuser.PNG)
+5. Once we click to create, the user is created
+![Fill user data](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_newuser.PNG)  
+  
+  
+From this point we go back to our applciation and we can login with the new user:  
+  
+![login](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_login.PNG)
