Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -218,3 +218,40 @@ In the case of the CD for the WebForms application we repeat the process, but ch
 
 ![Deploy WebForms](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/DeployWebForms.PNG)
 
+### Updating environment variables with VSTS variables 
+
+Because we do not want to store in the code reposistory the values for our cofiguration variables, we need to do some steps. What we will do here is to put the values in the Release definition and substitute them during the release. For Kubernetes we have seen that the yml files store the environment variables. We have created one specific configuration file for the CD on 'Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments\eshop-modernized-mvc-k8s-services-CD-deployment.yml'. This file is the same as the original one, but with the variables set with a replace token:
+```
+(...)
+env:
+- name: ConnectionString
+  value: "Server=sql-data;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Pass@word"
+- name: UseMockData
+  value: "False"
+- name: UseCustomizationData
+  value: "False"
+- name: UseAzureStorage
+  value: "#{use_azure_storage}#"
+- name: StorageConnectionString
+  value: "#{your_storage_connection_string}#"
+- name: AppInsightsInstrumentationKey
+  value: "#{your_app_insights_instrument_key}#"
+- name: UseAzureActiveDirectory
+  value: "#{use_azure_active_directory}#"
+- name: AzureActiveDirectoryClientId
+  value: "#{your_aad_client_id}#"
+- name: AzureActiveDirectoryTenant
+  value: "#{your_aad_directory_tenant}#"
+- name: PostLogoutRedirectUri
+  value: "#{your_aad_logout_refirect_uri}#"
+(...)
+```
+
+We will set this value in the release process, using the 'Replace Tokens' task. We have set the task to take all the xml files and replace the pattern '{key_name}#' by the key_name if this one is found as a variable in the release.
+
+ ![Replace Tokens](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/ReplaceTokens.PNG)
+
+ In our example we have added this keys to the variables in the CD. As you can see the name of this variables corresponds to the replace tokens in the previous yml configuration file. 
+
+ ![Environment variables](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/EnvironmentVariablesk8s.PNG)
+
