Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -332,7 +332,7 @@ We will set this value in the release process, using the 'Replace Tokens' task. 
 
  ![Replace Tokens](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/ReplaceTokens.PNG)
 
- In our example we have added this `your_app_insights_instrument_key` to the variables in the CD.
+In our example we have added these keys to the variables in the CD. As you can see the name of the variables corresponds to the replace tokens in the previous Service Fabric configuration file.
 
  ![Environment variables](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/EnvironmentVariables.PNG)
 
