Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -403,27 +403,36 @@ You should see a similar execution to the following image.
 
 
 ### Scenario C: Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
+The whole process is the same for the MVC application and for the WebForms application, so here only the MVC CI and CD definitions are explained.
 
 DevOps scenario:
 
 #### ![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
 
-##### Building the Docker image from VSTS:
+### Building and pushing the Docker image to a Docker Registry (Docker Hub or Azure Container Registry)
+For the CI we have a Build with 4 steps. The first two are standard in majority of builds, a restore for the Nuget packages and a build of the .Net project.
+
+The third step is 'Build the image' using the docker-compose tool. We only need to pass the docker-compose files as parameters. In the 'Docker Compose File' variable we add our main docker-compose file (in this case 'eShopModernizedMVCSolution/docker-compose.yml'), and in the 'Additional Docker Compose Files' field we add the rest of docker-compose files (in this case only the 'eShopModernizedMVCSolution/docker-compose.override.yml'). If you need any extra tags for the image add them in this step. The 'Action' is 'Build service images'.
 
 ![image](https://user-images.githubusercontent.com/1712635/30527536-c98c2daa-9bde-11e7-8406-3d15515bc73a.png)
 
-##### Pushing the Docker image to a Docker Registry (Docker Hub or Azure Container Registry):
+After this step, we have already the image build. Now we have to push this image to our repository. We have to set the correct connection as endpoint in the 'Docker Registry Connection', and as in the previous section fill the docker compose parameters with the correct files. As 'Action' in this case is 'Push service images'. Again, if you want to push the image with an specific tag, remember to put it in the 'Additional Image Tags'.
 
 ![image](https://user-images.githubusercontent.com/1712635/30527551-12a5e8aa-9bdf-11e7-8c6c-269b3dd34b9a.png)
 
+Once the step is finished, we have the new image stored in the connected repository.
 
-##### Deploying to Docker Host from Visual Studio Team Services Release pipeline tasks. 
+
+
+### Deploying to Docker Host from Visual Studio Team Services Release pipeline tasks. 
+For the Release pipeline we want to deploy the image pushed to the repository during the Build to our VM. 
 
 Environment definition
 ![image](https://user-images.githubusercontent.com/1712635/30527624-a7dc312c-9bdf-11e7-9d3b-77f3c968a373.png)
 
+The steps to do basically will use Docker instructions and Docker comopose.
+
 Release/Deployment Tasks
 ![image](https://user-images.githubusercontent.com/1712635/30527667-f8972ed2-9bdf-11e7-9b97-79a9ad6946a3.png)
 
-- TBD (Plain)
 
