Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -425,14 +425,34 @@ Once the step is finished, we have the new image stored in the connected reposit
 
 
 ### Deploying to Docker Host from Visual Studio Team Services Release pipeline tasks. 
-For the Release pipeline we want to deploy the image pushed to the repository during the Build to our VM. 
+We have a pipeline where we want to get the new image and deploy it in the VM. This new image has been build and pushed in our container repository in the Build process. 
 
-Environment definition
 ![image](https://user-images.githubusercontent.com/1712635/30527624-a7dc312c-9bdf-11e7-9d3b-77f3c968a373.png)
 
-The steps to do basically will use Docker instructions and Docker comopose.
+Our Artifact will be the source code in the repository:
 
-Release/Deployment Tasks
-![image](https://user-images.githubusercontent.com/1712635/30527667-f8972ed2-9bdf-11e7-9b97-79a9ad6946a3.png)
+![Artifact](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/Artifact.PNG)
+
+The tasks of the Release pipeline basically will do four actions: remove old containers, remove old images, deploy new images and run the containers.
+
+#### 1. Stop containers
+The first step is to ensure that there are no containers running in the VM. To do so we add one Docker action task
+
+![Stop containers](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/StopContainers.PNG)
+
+As we can see in the 'Command' field, we simply do a `docker rm -f` command with the name of the containers. In the 'Docker Host Connection' we must set the connection to our VM.
+
+#### 2. Remove image
+We use the same task as in the previous step, a Docker command task, but here to remove the images. We have as 'Action' 'Run a  Docker command' and as a 'Command' we have `rmi -f eshop/modernizedmvc`
+
+![Remove image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/RemoveImage.PNG)
+
+#### 3. Remove SQL image
+Exactly as the previous task, but for the SQL image. This step is not needed if you are not using one SQL database in a container.
+
+![Remove SQL image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/RemoveSQLImage.PNG)
+
+
+
 
 
