Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -433,7 +433,7 @@ Our Artifact will be the source code in the repository:
 
 ![Artifact](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/Artifact.PNG)
 
-The tasks of the Release pipeline basically will do four actions: remove old containers, remove old images, deploy new images and run the containers.
+The Release pipeline will do four actions: remove old containers, remove old images, deploy new images and run the containers.
 
 #### 1. Stop containers
 The first step is to ensure that there are no containers running in the VM. To do so we add one Docker action task
@@ -448,11 +448,35 @@ We use the same task as in the previous step, a Docker command task, but here to
 ![Remove image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/RemoveImage.PNG)
 
 #### 3. Remove SQL image
-Exactly as the previous task, but for the SQL image. This step is not needed if you are not using one SQL database in a container.
+Exactly as the previous task, but for the SQL image. This step is not needed if you are not using SQL database in container format. 
 
 ![Remove SQL image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/RemoveSQLImage.PNG)
 
+#### 4. Get latest image of the aplication
+Once removed the images we pull the new one
 
+![Get latest image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/GetLatestImage.PNG)
+
+#### 5. Get latest image of the SQL database
+Again, this step is only needed if you want a container with SQL.
+
+![Get SQL image](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdvm/GetLatestSQLImage.PNG)
+
+#### 6. Create and run the containers
+This step is the command `docker-compose -f docker-compose.nobuild.yml -f docker-compose.override.yml up`. We are creating the containers and running them. Note that we are using the `docker-compose.nobuild.yml` file. This file is the same as the original docker-compose.yml that we use for building the images but without the option 'Build', because we only want to run an already existing image (stored already in a repository), not build a new one.
+
+![Deploy to VM](https://raw.githubusercontent.com/dotnet-architecture/eShopModernizing/master/img/cicdvm/DeployToVM.PNG)
+
+Regarding the environmet variables, we can override them in the 'Environment Variables' option of the task. What you put there will override the values of the .yml files. This way we avoid having variables configured directly in the yml files, that are stored in the repository. In the 'Environment Variables' we store values that change or cannot be in the repository (basically the private data). We have stored the next variables:
+```
+ESHOP_EXTERNAL_DNS_NAME_OR_IP=xxxxx.westus.cloudapp.azure.com
+USE_AZURE_STORAGE=True
+ESHOP_AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=eshopmodernizedimages;AccountKey=xxxx==;EndpointSuffix=core.windows.net
+APP_INSIGHTS_INSTRUMENTATION_KEY=xxxxxxxx-yyyy-zzzz-962b-9bbf9f4f7f92
+USE_AZURE_ACTIVE_DIRECTORY=True
+AZURE_ACTIVE_DIRECTORY_CLIENT_ID=xxxxxxxx-yyyy-zzzz-a275-8bff314a4cbb
+AZURE_ACTIVE_DIRECTORY_TENANT=eshoponcontainers.onmicrosoft.com
+```
 
 
 
