Updated 10. How to migrate the SQL database to Azure with the Azure Database Migration Service (markdown)

--- a/10.-How-to-migrate-the-SQL-database-to-Azure-with-the-Azure-Database-Migration-Service.md
+++ b/10.-How-to-migrate-the-SQL-database-to-Azure-with-the-Azure-Database-Migration-Service.md
@@ -1,5 +1,68 @@
-How to migrate the SQL database to Azure with the Azure Database Migration Service to Azure SQL DB and Azure SQL DB Managed Instance.
-TBD:
+## Overview
+In cases where we have our SQL databases on-premises and we want to migrate them to Azure, we can do it in a simpler way than manually with the Azure Database Migration Service. The service is analyzing our on-premises databases and providing information in every step of the process in case we want to customize one specific step.
 
-With:
-https://azure.microsoft.com/en-us/blog/azure-database-migration-service-announcement-at-build/
+## Goals for this walkthrough
+Show you the basic steps to migrate an on-premises database to Azure with the Azure Database Migration Service (ADMS). The process will the explained in detail using the Microsoft Data Migration Assistant, which is part of the ADMS and allows us to do the whole process. In addition, the other options of using this service will be exposed.
+
+## Migration of on-premises SQL Server database with Microsoft Data Migration Assistant
+In the cases where your on-premises database is not reachable from Azure, and you do not want to create an Azure VPN, you can use the Azure Database Migration Assistant (ADMA). You can download it directly [from the microsoft web page](https://blogs.msdn.microsoft.com/datamigration/dma/). There is a link as well in the migration steps of the Azure Migration service:
+
+![Install ADMS](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/install-dbma.png)
+
+### 1. Create migration
+Once installed and started the tool, select create a new process:
+
+![Create migration](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/create-migration.PNG)
+
+In the options select Migration, give a name to the migration project and then select the source and target types. In our case we are migrating from a SQL Server to Azure SQL Database.
+
+### 2. Configure source
+In this screen we add the configuration to connect to our source SQL database:
+
+![Select source](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/select-source.PNG)
+
+### 3. Select target
+Now we put the data of our Azure SQL Database. In case that we do not have it already created, the link `Create a new Azure SQL Database...` is provided to get more information about how to create one. Write the server name and the connection credentials, and the select the target database, in our case we have named in `eshop-modernized-migrated`:
+
+![Select target](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/select-target.PNG)
+
+### 4. Select objects
+The assistant will process the information and then we will select the 'objects' to migrate. In our case we want a full migration. If there is any issue for the migration of any object, it will be shown in this step.
+
+![Select objects](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/select-objects.PNG)
+
+Click `Generate SQL script` to create the database schema.
+
+### 5. Script & deploy schema
+The assistant gives us the option to modify the script for the schema generation. Once we are ready, we click `Deploy schema` to deploy in the target Azure SQL database.
+
+![Deploy schema](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/deploy-schema.PNG)
+
+### 6. Migrate data
+Click migrate data to configure the data to migrate:
+
+![Migrate data](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/migrate-data.PNG)
+
+Select the data tables Which must be migrated:
+
+![Data selection](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/data-selection.PNG)
+
+Once ready click `Start data migration`.
+
+### 7. Migration completed
+Once the process is finished, we will see the results about the whole migration
+
+![Migration completed](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/migration-completed.PNG)
+
+After this step we have successfully migrated our on-prem database to Azure.
+
+## Alternatives to the assistant
+In the previous guide we have installed the migration assistant in one of our on-premises machines to do the whole process. This is convenient in cases when we do not want to connect our database to Azure, but this forces our servers to do the whole processing. On the contrary, the Azure Database Migration Service does the whole process in the cloud for us, but we need to give visibility to our on-prem databases from the Azure resources.
+
+![Migration service](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/migration-service.PNG)
+
+The service works as the Data Migration Assistant, we have to create a `New migration project` and then select the options as with the assistant. 
+
+![Migration service 2](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/migration-service2.PNG)
+
+In this case the process is being done from the Azure service, so for the source server name we have to put one SQL server visible from Azure. This can be achieved for on-premises servers using either [Azure VPN](https://azure.microsoft.com/en-us/services/vpn-gateway/) or [Azure ExpressRoute](https://azure.microsoft.com/en-us/services/expressroute/).
