Updated 10. How to migrate the SQL database to Azure with the Azure Database Migration Service (markdown)

--- a/10.-How-to-migrate-the-SQL-database-to-Azure-with-the-Azure-Database-Migration-Service.md
+++ b/10.-How-to-migrate-the-SQL-database-to-Azure-with-the-Azure-Database-Migration-Service.md
@@ -56,6 +56,15 @@ Once the process is finished, we will see the results about the whole migration
 
 After this step we have successfully migrated our on-prem database to Azure.
 
+### 8. Change the connection string
+When we have finished the process, we are ready to use the database in Azure. For eShopModernizing we just need to change the connection string to the new one. Go to the Azure SQL database, and in the Overview tab select `Show database connection strings`. Once there, copy the connection string and change it in the variable in eShopModernizing 
+
+![Database migrated](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/databse-migrated.PNG)
+
+Yo can write the connection string in the .env file if you are using Docker Compose. Uncomment the `ESHOP_AZURE_STORAGE_CONNECTION_STRING` line removing the `#` character and put the connection string value. For the other cases (Kubernetes, Service Fabric or Virtual Machines) you can follow the other sections of this wiki where we explain how to configure each environment.
+
+![env file](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/admigrationservice/env-file.PNG)
+
 ## Alternatives to the assistant
 In the previous guide we have installed the migration assistant in one of our on-premises machines to do the whole process. This is convenient in cases when we do not want to connect our database to Azure, but this forces our servers to do the whole processing. On the contrary, the Azure Database Migration Service does the whole process in the cloud for us, but we need to give visibility to our on-prem databases from the Azure resources.
 
