Updated 02. How to containerize the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -10,7 +10,8 @@ Show you several alternatives on how to containerize an existing .NET Framework 
 
 This Walkthrough covers the three approaches although it offers further details for the VS 2017 Tools for Docker approach.
 
-##  Scenario
+##  Scenario 1:
+In this scenario you will containerize ASP.NET MVC or Web Forms apps (Traditional ASP.NET frameworks in .NET Framework 4.x).
 The diagram below shows the scenario for the containerized eShop legacy applications.
 ![image](https://user-images.githubusercontent.com/1712635/30395628-9c4bff98-987b-11e7-82ca-89a1648f3bdc.png)
 
