--- a/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -5,7 +5,7 @@ Windows Containers should be used as a way to improve deployments to production,
 Show you several alternatives on how to containerize an existing .NET Framework application:
 
 1.	Containerized your application through Visual Studio 2017 Tools for Docker (VS 2017 or later).
-2.	Containerized your application by manually adding the dockerfiles and using the Docker CLI.
+2.	Containerized your application by manually adding the [dockerfiles](https://docs.docker.com/engine/reference/builder/)and using the Docker CLI.
 3.	Containerized your application through [Image2Docker](https://github.com/docker/communitytools-image2docker-win) tool (Open Source tool from Docker)
 
 This Walkthrough covers the three approaches although it offers further details for the VS 2017 Tools for Docker approach.
