Updated 02. How to containerize the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -30,6 +30,9 @@ Before you run the solution, you must make sure that you configure Docker to use
 If the menu item says "Switch to Linux containers", you are already running Docker with Windows Containers.
 
 ### Using Visual Studio to add Docker support to the application
+
+You can do the following steps by adding "Add Docker Support" to the baseline [eShopLegacyMVCSolution](https://github.com/dotnet-architecture/eShopModernizing/tree/master/eShopLegacyMVCSolution), for instance, by pulling that project into your machine and opening the **eShopLegacyMVC.sln** solution.
+
 Visual Studio 2017 provides great support for containerizing an application. You right-click the project node and then select **Add** and **Docker Support**. The Docker project template adds a new project to the solution called **docker-compose**. The project contains the Docker assets (simple .yml metadata files) that compose the Docker images and containers' startup settings you need, as shown in the figure below. 
 
 ![image](https://user-images.githubusercontent.com/1712635/30396480-99d5cf20-987e-11e7-984d-4ddf5244f516.png)
