Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -7,6 +7,8 @@ This walkthrough shows you the main scenarios when deploying Windows Containers 
 ## Introduction to Azure Container Instances (ACI)
 Azure Container Instances makes it easy to create and manage Docker containers in Azure, without having to provision virtual machines or adopt a higher-level service. With ACI, you can directly deploy a Windows container in Azure and expose it to the internet with a fully qualified domain name (FQDN) in a matter of seconds (Provided that you have the Windows Container image ready in a Docker registry like Docker Hub or Azure Container Registry).
 
+For further information on ACI, check the documentation here: https://docs.microsoft.com/en-us/azure/container-instances/ 
+
 ##  Scenarios
 
 TBD
