Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -11,4 +11,14 @@ For further information on ACI, check the documentation here: https://docs.micro
 
 ##  Scenarios
 
-TBD
+
+## Create a resource group for eShopModernized and ACI
+Azure container instances, like all Azure resources, must be placed in a resource group, a logical collection into which Azure resources are deployed and managed.
+
+You can create a resource group with the `az group create` command from the **Azure Cloud Shell** or the **Azure CLI**.
+
+The following example creates a resource group named `eShopModernizedACI` in the `westus` datacenter in Azure.
+
+`az group create --name eShopModernizedACI --location westus`
+
+================ TBD ==================
